# candiamazing

./: .gitignore  .readthedocs.yaml  README.md  codecov.yaml  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
docs/: README.md  requirements.txt
docs/source/: CamazingExample.ipynb  _config.yml  _toc.yml  contributing.md  install.md  intro.md  license.md
src/candiamazing/: README.md  __init__.py  _version.py  cli.py  core.py  test.py  utils.py
tests/: README.md  test_cli.py  test_core.py  test_utils.py
